k8s/kafka-redis-consumer.deployment.yaml
# kafka-redis-consumer DEPLOYMENT
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-redis-consumer-deployment
  labels:
    tier: kafka-redis-consumer
spec:
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  replicas: 3
  selector:
    matchLabels:
      tier: kafka-redis-consumer
  template:
    metadata:
      labels:
        tier: kafka-redis-consumer
    spec:
      containers:
        - name: kafka-redis-consumer
          image: antoineleguillou/kafka-redis-consumer:20230417.2
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: 350m
              memory: 450Mi
            requests:
              cpu: 300m
              memory: 320Mi
          ports:
            - containerPort: 80
      restartPolicy: Always
---
# kafka-redis-consumer SERVICES
apiVersion: v1
kind: Service
metadata:
  name: kafka-redis-consumer-service
spec:
  selector:
    tier: kafka-redis-consumer
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      name: http
---
