k8s/result.deployment.yaml
# result DEPLOYMENT
apiVersion: apps/v1
kind: Deployment
metadata:
  name: result-deployment
  labels:
    tier: result
spec:
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  replicas: 3
  selector:
    matchLabels:
      tier: result
  template:
    metadata:
      labels:
        tier: result
    spec:
      containers:
        - name: result
          image: ttl.sh/dc950c01-50aa-4578-8096-8d399ec69f51:24h
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: 350m
              memory: 450Mi
            requests:
              cpu: 300m
              memory: 320Mi
          ports:
            - containerPort: 80

      restartPolicy: Always
---
# result SERVICES
apiVersion: v1
kind: Service
metadata:
  name: result-service
spec:
  selector:
    tier: result
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      name: http
