k8s/vote.deployment.yaml
# vote DEPLOYMENT
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vote-deployment
  labels:
    tier: vote
spec:
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  replicas: 3
  selector:
    matchLabels:
      tier: vote
  template:
    metadata:
      labels:
        tier: vote
    spec:
      containers:
        - name: vote
          image: ttl.sh/f2367553-9968-43e5-bc61-be501c323fbf:24h
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: 350m
              memory: 450Mi
            requests:
              cpu: 300m
              memory: 320Mi
          ports:
            - containerPort: 80
      restartPolicy: Always
---
# vote SERVICES
apiVersion: v1
kind: Service
metadata:
  name: vote-service
spec:
  selector:
    tier: vote
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      name: http
