k8s/ingress-monitor.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/issuer: "certmanager-prometheus-issuer"
spec:
  tls:
    - hosts:
        - nsa-sla-monitor.students-epitech.ovh
      secretName: tls-nsa-sla-monitor-certmanager-prometheus-issuer
  rules:
    - host: nsa-sla-monitor.students-epitech.ovh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prometheus-grafana
                port:
                  number: 80
