k8s/ingress-result.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-result
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/issuer: "certmanager-application-issuer"
spec:
  tls:
    - hosts:
        - nsa-sla-result.students-epitech.ovh
      secretName: tls-nsa-sla-result-certmanager-application-issuer
  rules:
    - host: nsa-sla-result.students-epitech.ovh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: result-service
                port:
                  number: 80
