k8s/ingress-vote.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-vote
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/issuer: "certmanager-application-issuer"
spec:
  tls:
    - hosts:
        - nsa-sla-vote.students-epitech.ovh
      secretName: tls-nsa-sla-vote-certmanager-application-issuer
  rules:
    - host: nsa-sla-vote.students-epitech.ovh
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vote-service
                port:
                  number: 80
